style.css
* {
    box-sizing: border-box;
}

.hide {
    display: none;
}

.hide-map {
    visibility: hidden;
}

.app-state {
    margin-top: 40px;
}

.active {
    color: lightgreen;
    font-size: 18px;
}

.in-active {
    color: lightgray;
}

/*header {
    width: 600px;
    height: 65px;
    border: 1px solid black;
    border-radius: 5px;
}*/

.title {
    margin-top: 0;
    margin-bottom: 0;
}

/*.subtitle {
    margin-top: 10px;
}*/

.tag-line {
    /*width: 600px;*/
    margin-top: 40px;
    /*border: 1px solid lightgray;*/
}

main {
    margin-top: 15px;
}

#landing-form {
    margin-top: 40px;
    margin-bottom: 20px;
}

#final-form {
    margin-top: 40px;
}

input#start, input#end {
    width: 220px;
}
label#startLabel, label#endLabel {
    margin-top: 20px;
    margin-left: 15px;
}

button#finalBtn {
    margin-top: 5px;
}

.book-results, .coffee-shop-results, .final-page-results {
    /*margin-top: 40px;*/
    width: 750px;
    height: 700px;
    overflow: auto;
    border: 1px solid lightgray;
    border-radius: 8px;
}

#map {
    display: inline-block;
}

#final-map {
    display: inline-block;
}

/*.find-coffee-shop-page {
    display: none;
}*/

#coffee-shop-input {
    display: none;
}

.selected-results {
    margin-bottom: 5px;
}

.selected-book {
    height: 100px;
    /*display: inline-block;*/
    padding: 10px;
    float: left;
    background-color: lightblue;
}

.selected-book-name {
    display: inline-block;
}

.selected-coffee-shop {
    height: 100px;
    margin-left: 5px;
    display: inline-block;
    padding: 10px;
    background-color: pink;
}

.selected-coffee-shop-name {
    display: inline-block;
}

.selected-coffee-shop-vicinity {
    display: inline-block;
}

.side-panel-wrap {
    display: inline-block;
    height: 700px;
    width: 352px;
    text-align: center;
}

#coffee-shop-reviews {
    /*margin-top: 40px;*/
    width: 350px;
    height: 675px;
    padding: 7px;
    /*display: inline-block;*/
    border: 1px solid lightgray;
    overflow: auto;
    border-radius: 8px;
}

#coffeeShopBtn {
    /*display: none;*/
    /*float: right;*/
    /*position: relative;
    left: 480px;
    bottom: 3px;*/
    border-radius: 5px;
    /*margin-right: 55px;*/
    margin-bottom: 3px;
}

.coffee-review-border {
    border-bottom: 1px solid black;
}

.coffee-review-background {
    background-color: #cccccc;
}

.coffee-review-text {
    text-align: left;
    padding-left: 4px;
}

#coffe-shop-search {
    width: 325px;
    height: 27px;
    margin-top: 10px;
}

#text-directions-panel {
    width: 350px;
    height: 700px;
    padding: 7px;
    display: inline-block;
    border: 1px solid lightgray;
    overflow: auto;
    border-radius: 8px;
}

.address-input-panel {
    display: inline-block;
    width: 250px;
    height: 700px;
    padding: 7px;
    border: 1px solid lightgray;
    overflow: auto;
    border-radius: 8px;
}

